--- a/src/index.jade
+++ b/src/index.jade
@@ -2,61 +2,59 @@
 html(ng-app="calcApp")
   head
     title Thinkful Waitstaff Calculator
-    link(href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css", rel="stylesheet")
+    //- link(href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css", rel="stylesheet")
+    link(href='http://fonts.googleapis.com/css?family=Lobster', rel='stylesheet')
     link(href="css/styles.css", rel="stylesheet")
 
   body
     .container(ng-controller="calcCtrl")
       header
-        h1 Waitstaff Calculator
+        h1 TipiCal
 
-      .row
-        .col-sm-7
-          .panel
-            h2 Enter the Meal Details
-            form.form-horizontal(ng-submit="submitForm()", name="priceForm", novalidate)
-              .form-group
-                label.control-label Base Meal Price: $
-                input.form-control(type="number", ng-model="data.base_price")
+      .panel
+        h2 Enter the Meal Details
+        form(ng-submit="submitForm()", name="priceForm", novalidate)
+          .form-group
+            label.control-label Base Meal Price ($)
+            input.form-control(type="number", ng-model="data.base_price")
 
-              .form-group
-                label.control-label Tax Rate: %
-                input.form-control(type="number", ng-model="data.tax_rate")
+          .form-group
+            label.control-label Tax Rate (%)
+            input.form-control(type="number", ng-model="data.tax_rate")
 
-              .form-group
-                label.control-label Tip Percentage: %
-                input.form-control(type="number", ng-model="data.tip_percentage")
+          .form-group
+            label.control-label Tip Percentage (%)
+            input.form-control(type="number", ng-model="data.tip_percentage")
 
-              .form-group
-                input.btn.btn-primary(type="submit", value="Submit") Submit
-                button.btn(ng-click="cancelInfo()") Cancel
+          .form-group.text-center
+            input.btn.btn-primary(type="submit", value="Submit") Submit
+            button.btn(ng-click="cancelInfo()") Cancel
 
-        .col-sm-5
-          .well
-            h2 Customer Charges
-            dl.dl-horizontal
+        section.sidebar
+          h2 Customer Charges
+          dl.dl-horizontal
 
-              dt Subtotal
-              dd {{ data.customer_subtotal | currency }}
+            dt Subtotal
+            dd {{ data.customer_subtotal | currency }}
 
-              dt Tip
-              dd {{ data.tip | currency }}
+            dt Tip
+            dd {{ data.tip | currency }}
 
-              dt Total
-              dd {{ data.meal_total | currency}}
+            dt Total
+            dd {{ data.meal_total | currency}}
 
-          .well
-            h2 My Earnings Info
-            dl.dl-horizontal
+      .panel.primary
+        h2 My Earnings Info
+        dl.dl-horizontal
 
-              dt Tip Total
-              dd {{ data.tip_total | currency}}
+          dt Tip Total
+          dd {{ data.tip_total | currency}}
 
-              dt Meal Count
-              dd {{ data.meal_count}}
+          dt Meal Count
+          dd {{ data.meal_count}}
 
-              dt Average Tip Per meal
-              dd {{ data.average_tip_per_meal | currency }}
+          dt Average Tip Per meal
+          dd {{ data.average_tip_per_meal | currency }}
 
       button.btn.pull-right(ng-click="resetApp()") Reset
 
