--- a/src/styles/styles.styl
+++ b/src/styles/styles.styl
@@ -1,2 +1,112 @@
+global-reset()
+
+*
+  box-sizing border-box
+  &:before
+  &:after
+    border-box
+
+$green       = #94C984
+$green_dark  = #19370F
+$green_light = #D7F3CE
+
+html
 body
-  font 16px/1.5 "Helvetica", "Arial", sans-serif
+  font-size 100%
+
+body
+  -webkit-font-smoothing antialiased
+  font       16px/1.5 "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif
+  background #301D11
+
+h1
+  font-family 'Lobster'
+  font-size   3rem
+  text-align  center
+  color       $green
+  padding     .5rem 0
+
+h2
+  font-size   1.4rem
+  font-weight bold
+  color       $green_dark
+  padding     1rem 0
+
+.container
+  margin    0 auto
+  max-width 60rem
+  padding   0 1rem 1rem
+  position  relative
+  overflow  auto
+
+.form-group
+  clearfix()
+
+label
+  display block
+
+.form-group
+  margin-bottom 1rem
+
+.form-control
+  border    solid 1px #c0c9d9
+  padding   .75rem
+  font-size 1rem
+  width     100%
+
+.panel
+  background    #F3F3F3
+  padding       .5rem 1.5rem 2rem
+  margin-bottom 1.25rem
+  border-radius 4px
+
+  @media (min-width:640px)
+    float left
+    width 60%
+
+  &.primary
+    background $green_light
+
+    @media (min-width:640px)
+      width       38%
+      margin-left 2%
+
+.btn
+  -webkit-appearance     none
+  -webkit-font-smoothing antialiased
+  background             #fff
+  border                 1px solid rgba(0, 0, 0, 0.1)
+  border-radius          4px
+  box-sizing             border-box
+  cursor                 pointer
+  display                inline-block
+  font-size              1rem
+  font-weight            bold
+  outline                none
+  padding                0.75rem 1rem
+  position               relative
+  text-align             center
+  text-decoration        none
+  user-select            none
+  white-space            no-wrap
+  transition             border-color 0.2s ease-out
+
+  &:hover
+    border-color rgba(0, 0, 0, 0.5)
+
+  &.btn-primary
+    background #94C984
+    color      #fff
+    text-shadow 0 0 3px #19370F
+
+/* UTILITY*/
+.text-center
+  text-align center
+
+.pull-right
+  float right
+
+  @media (min-width:640px)
+    position absolute
+    bottom   2rem
+    right    1rem
