--- a/src/styles/styles.styl
+++ b/src/styles/styles.styl
@@ -6,7 +6,7 @@ global-reset()
   &:after
     border-box
 
-$green       = #94C984
+$green       = #458E2F
 $green_dark  = #19370F
 $green_light = #D7F3CE
 
@@ -17,7 +17,7 @@ body
 body
   -webkit-font-smoothing antialiased
   font       16px/1.5 "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif
-  background #301D11
+  background #C0E0CE
 
 h1
   font-family 'Lobster'
@@ -27,7 +27,7 @@ h1
   padding     .5rem 0
 
 h2
-  font-size   1.4rem
+  font-size   1.2rem
   font-weight bold
   color       $green_dark
   padding     1rem 0
@@ -48,11 +48,34 @@ label
 .form-group
   margin-bottom 1rem
 
+.form-actions
+  text-align center
+
+  @media (min-width:878px)
+    text-align left
+
 .form-control
   border    solid 1px #c0c9d9
   padding   .75rem
   font-size 1rem
   width     100%
+
+.tip
+  display    inline-block
+  font-size  10px
+  font-style normal
+
+.error
+  color     red
+  font-size 10px
+
+dl
+  line-height 2
+dt
+  float left
+  clear both
+dd
+  float right
 
 .panel
   background    #F3F3F3
@@ -65,11 +88,22 @@ label
     width 60%
 
   &.primary
-    background $green_light
+    box-shadow 0 0 3px 0 $green_dark
 
     @media (min-width:640px)
       width       38%
       margin-left 2%
+
+.sidebar
+  @media (min-width:878px)
+    float       left
+    width       36%
+    margin-left 4%
+
+.main-section
+  @media (min-width:878px)
+    float left  
+    width 60%
 
 .btn
   -webkit-appearance     none
@@ -95,8 +129,8 @@ label
     border-color rgba(0, 0, 0, 0.5)
 
   &.btn-primary
-    background #94C984
-    color      #fff
+    background  $green
+    color       #fff
     text-shadow 0 0 3px #19370F
 
 /* UTILITY*/
@@ -110,3 +144,6 @@ label
     position absolute
     bottom   2rem
     right    1rem
+
+.total
+  font-weight bold
