--- a/src/index.jade
+++ b/src/index.jade
@@ -1,4 +1,3 @@
-
 !!! 5
 html(ng-app="calcApp")
   head
@@ -18,8 +17,8 @@ html(ng-app="calcApp")
           form(ng-submit="submitForm()", name="priceForm", novalidate)
             .form-group
               label.control-label Base Meal Price ($)
-              input.form-control(type="number", ng-model="data.base_price", required, name="base_price")
-              .error(ng-show="checkRequired('base_price')") Please enter the base meal price
+              input.form-control(type="number", ng-model="data.base_price", min="1", name="base_price")
+              .error(ng-show="checkMin('base_price')") Please enter at least $1
 
             .form-group
               label.control-label Tax Rate (%)
@@ -30,12 +29,11 @@ html(ng-app="calcApp")
             .form-group
               label.control-label Tip Percentage (%)
               input.form-control(type="number", ng-model="data.tip_percentage", required, name="tip_percentage")
-              .error(ng-show="checkRequired('tip_percentage')") Please place a valid number 
+              .error(ng-show="checkRequired('tip_percentage')") Please place a valid number
 
             .form-group.form-actions
-              input.btn.btn-primary(type="submit", value="Submit") Submit
-              //- For John, cancelInfo increments the meal count?
-              button.btn(ng-click="cancelInfo()") Cancel
+              button.btn.btn-primary(type="submit", value="Submit") Submit
+              button.btn(type="button", ng-click="cancelInfo()") Cancel
 
         section.sidebar
           h2 Customer Charges
@@ -49,9 +47,9 @@ html(ng-app="calcApp")
 
             dt.total Total
             dd.total {{ data.meal_total | currency}}
-          
 
-      .panel.primary(ng-class="{'callout':submitted}")
+
+      .panel.primary
         h2 My Earnings Info
         dl
 
