--- a/src/index.jade
+++ b/src/index.jade
@@ -7,66 +7,20 @@ html(ng-app="calcApp")
     link(href="css/styles.css", rel="stylesheet")
 
   body
-    .container(ng-controller="calcCtrl")
+    .container
       header
         h1 TipiCal
+      nav
+        a(href="#/home") Home
+        a(href="#/new_meal") New Meal
+        a(href="#/my_earnings") My Earnings
 
-      .panel.with-divider
-        section.main-section
-          h2 Enter the Meal Details
-          form(ng-submit="submitForm()", name="priceForm", novalidate)
-            .form-group
-              label.control-label Base Meal Price ($)
-              input.form-control(type="number", ng-model="data.base_price",  min="1", name="base_price", value="0")
-              .error(ng-show="submitted && checkMin('base_price')") Please enter at least $1
-
-            .form-group
-              label.control-label Tax Rate (%)
-              input.form-control(type="number", ng-model="data.tax_rate", required, name="tax_rate")
-              i.tip Just type this once, we'll remember it until you change it!
-              .error(ng-show="submitted && checkRequired('tax_rate')") Please place a valid number
-
-            .form-group
-              label.control-label Tip Percentage (%)
-              input.form-control(type="number", ng-model="data.tip_percentage", required, name="tip_percentage")
-              .error(ng-show="submitted && checkRequired('tip_percentage')") Please place a valid number
-
-            .form-group.form-actions
-              button.btn.btn-primary(type="submit", value="Submit") Submit
-              button.btn(type="button", ng-click="cancelInfo()") Cancel
-
-        section.sidebar
-          h2 Customer Charges
-          dl
-
-            dt Subtotal
-            dd {{ data.customer_subtotal | currency }}
-
-            dt Tip
-            dd {{ data.tip | currency }}
-
-            dt.total Total
-            dd.total {{ data.meal_total | currency}}
-
-
-      .panel.primary
-        h2 My Earnings Info
-        dl
-
-          dt Tip Total
-          dd.highlight {{ data.tip_total | currency}}
-
-          dt Meal Count
-          dd {{ data.meal_count}}
-
-          dt Average Tip Per meal
-          dd.highlight {{ data.tip_average | currency }}
-
-        button.btn#btn-reset(type="button", ng-click="resetApp()") Reset
-
+      div(ui-view)
 
     script(src="http://code.jquery.com/jquery-2.0.3.min.js")
     script(src="http://cdnjs.cloudflare.com/ajax/libs/velocity/0.11.9/jquery.velocity.min.js")
     script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.21/angular.min.js")
+    script(src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.21/angular-animate.js")
+    script(src="http://angular-ui.github.io/ui-router/release/angular-ui-router.min.js")
     script(src="js/calcApp.js")
 
