Add highlight class and $timeout

--- a/src/index.jade
+++ b/src/index.jade
@@ -54,13 +54,13 @@ html(ng-app="calcApp")
         dl
 
           dt Tip Total
-          dd.highlight {{ data.tip_total | currency}}
+          dd.highlight(ng-class="{'active':highlightOn}") {{ data.tip_total | currency}}
 
           dt Meal Count
           dd {{ data.meal_count}}
 
           dt Average Tip Per meal
-          dd.highlight {{ data.tip_average | currency }}
+          dd.highlight(ng-class="{'active':highlightOn}") {{ data.tip_average | currency }}
 
         button.btn#btn-reset(type="button", ng-click="resetApp()") Reset
 
